gccida/c1/cselib_invalidate_rtx
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_invalidate_rtx/src/cselib.c:1632:49: error: use of undeclared identifier 'machine_mode'
cselib_invalidate_regno( dest->fld[0].rtuint, ( machine_mode)BYTE2( v4)); 
                                                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_invalidate_rtx/src/cselib.c:1643:28: error: use of undeclared identifier 'machine_mode'
if ( push_operand( dest, ( machine_mode)*( ( unsigned __int8 *)dest + 2)) ) 
                           ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/cselib_invalidate_rtx/src/obj/cselib.o] Error 1
